fix: overflow table

--- a/app/presentation/assets/css/style.css
+++ b/app/presentation/assets/css/style.css
@@ -83,6 +83,18 @@ h3.account-subheading{
   margin: 0 auto;
 }
 
+.waypoint-form{
+  overflow-x: auto;
+}
+
+.responsive-table {
+  width: 100%;
+  border-collapse: collapse;
+  border-spacing: 0;
+  overflow-x: auto;
+}
+
+
 h2.plan-subheading{
   color:#1b2f39;
   font-size: 2rem;
